added support for planet Scenes

--- a/ANALYSIS_06_merge_results.ipynb
+++ b/ANALYSIS_06_merge_results.ipynb
@@ -14,7 +14,9 @@
     "import matplotlib.pyplot as plt\n",
     "import rasterio\n",
     "import datetime\n",
-    "import os, shutil"
+    "import os, shutil\n",
+    "from joblib import delayed, Parallel\n",
+    "import tqdm"
    ]
   },
   {
@@ -49,6 +51,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_vector(f):\n",
+    "    gdf = gpd.read_file(f).to_crs(epsg=4326)\n",
+    "    gdf['id_local'] = gdf.index\n",
+    "    gdf['dataset'] = f.stem\n",
+    "    gdf['model'] = f.parts[-2]\n",
+    "    split = f.stem.split('_')\n",
+    "    if len(split)==4:\n",
+    "        gdf[['scene', 'tile_id', 'date', 'sensor']] = split\n",
+    "    else:\n",
+    "        gdf[['date', 'scene', 'sensor']] = split\n",
+    "    return gdf\n",
+    "\n",
+    "def load_dataset(f):\n",
+    "    try:\n",
+    "        return get_vector(f)\n",
+    "    except:\n",
+    "        print(f'Error on {f.stem}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,25 +92,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load files and add to list "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_vector(f):\n",
-    "    gdf = gpd.read_file(f).to_crs(epsg=4326)\n",
-    "    gdf['id_local'] = gdf.index\n",
-    "    gdf['dataset'] = f.stem\n",
-    "    gdf['model'] = f.parts[-2]\n",
-    "    gdf[['scene', 'tile_id', 'date', 'sensor']] = f.stem.split('_')\n",
-    "    return gdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Load files and add to list "
+    "%time ds_list = Parallel(n_jobs=10)(delayed(load_dataset)(f) for f in tqdm.tqdm_notebook(flist[:]))"
    ]
   },
   {
@@ -130,6 +151,24 @@
    "outputs": [],
    "source": [
     "rdf = rdf.set_crs(epsg=4326)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate time variables for later analysis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdf['year'] = pd.to_datetime(rdf.iloc[:]['date'], infer_datetime_format=True).dt.year\n",
+    "rdf['month'] = pd.to_datetime(rdf.iloc[:]['date'], infer_datetime_format=True).dt.month\n",
+    "rdf['doy'] = pd.to_datetime(rdf.iloc[:]['date'], infer_datetime_format=True).dt.day_of_year"
    ]
   },
   {
