added inference and code cleanup

--- a/DEM_01_ProcessArcticDEM.ipynb
+++ b/DEM_01_ProcessArcticDEM.ipynb
@@ -26,7 +26,9 @@
     "import glob\n",
     "%config Completer.use_jedi = False\n",
     "from modules.utils import *\n",
-    "import datetime"
+    "import datetime\n",
+    "import shutil\n",
+    "import tqdm"
    ]
   },
   {
@@ -54,10 +56,7 @@
    "outputs": [],
    "source": [
     "FILEPATH = r'vector/RapidEye_Tiles.shp'\n",
-    "TS_FIELD = 'dem_order'\n",
-    "\n",
-    "GDrive_dir_elevation = 'AI-CORE/elevation'\n",
-    "GDrive_dir_slope = 'AI-CORE/slope'"
+    "TS_FIELD = 'dem_order'"
    ]
   },
   {
@@ -87,9 +86,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "#### Setup data "
+    "#### Setup data\n",
+    "* faster loading?\n",
+    "* https://geopandas.org/en/stable/docs/user_guide/io.html\n",
+    "```python\n",
+    "gdf = geopandas.read_file(\n",
+    "    geopandas.datasets.get_path(\"naturalearth_lowres\"),\n",
+    "    ignore_fields=[\"iso_a3\", \"gdp_md_est\"],\n",
+    ")\n",
+    "```"
    ]
   },
   {
@@ -105,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### filter to only one tile "
+    "### Manual Selection"
    ]
   },
   {
@@ -128,7 +137,7 @@
    "outputs": [],
    "source": [
     "field = 'tile_id'\n",
-    "# insert list of tile_ids to process here\n",
+    "#list tile_ids here\n",
     "idxs = []"
    ]
   },
@@ -136,7 +145,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### run process"
+    "### Auto selection of active and incomplete Locations "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query where\n",
+    "ArtcicDEM is not processed\n",
+    "Planet is downloaded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Temporary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "existing_planet_data = gdf[['pl_2018','pl_2019','pl_2020','pl_2021', 'pl_2022']].any(axis=1)\n",
+    "field = 'tile_id'\n",
+    "idxs = list(gdf[existing_planet_data & gdf.dem_order.isna()][field].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(idxs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start Processing DEM Tiles"
    ]
   },
   {
@@ -151,10 +203,17 @@
     "for idx in idxs:\n",
     "    # need to drop column: 'downloaded which may contain NaN values'\n",
     "    gdf_filt = gdf.query(f'{field} == {idx}')#.drop(columns='downloaded')\n",
-    "    tasks_slope.append(download_ee2(gdf_filt, slope, GDrive_dir=GDrive_dir_elevation, scale=2,  suffix='_slope', field=field))\n",
-    "    tasks_el.append(download_ee2(gdf_filt, rel_el_100, GDrive_dir=GDrive_dir_slope, scale=2,  suffix='_relative_elevation_100', field=field))\n",
+    "    tasks_slope.append(download_ee2(gdf_filt, slope, GDrive_dir='AI-CORE/slope', scale=2,  suffix='_slope', field=field))\n",
+    "    tasks_el.append(download_ee2(gdf_filt, rel_el_100, GDrive_dir='AI-CORE/elevation', scale=2,  suffix='_relative_elevation_100', field=field))\n",
     "    \n",
     "    gdf.loc[gdf_filt.index, TS_FIELD] = datetime.datetime.now().isoformat()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Show Running tasks "
    ]
   },
   {
@@ -166,6 +225,13 @@
     "print('Running Tasks:')\n",
     "for tasks in [tasks_el, tasks_slope]:\n",
     "    print([t.status()['description'] for t in tasks if t.status()['state'] == 'RUNNING'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Show finished tasks "
    ]
   },
   {
@@ -211,6 +277,65 @@
    "source": [
     "gdf.dropna(subset=['dem_order'], axis=0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Move processed files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dir = Path(r'O:\\My Drive')\n",
+    "target_dir = Path('Q:\\p_aicore_pf\\initze\\data\\ArcticDEM')\n",
+    "\n",
+    "src_elevation = download_dir / 'AI-CORE elevation'\n",
+    "src_slope = download_dir / 'AI-CORE slope'\n",
+    "tgt_elevation = target_dir / 'tiles_rel_el'\n",
+    "tgt_slope = target_dir / 'tiles_slope'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "el_list = list(src_elevation.glob('*.tif'))\n",
+    "for f in tqdm.tqdm_notebook(el_list[:]):\n",
+    "    try:\n",
+    "        shutil.move(str(f), tgt_elevation)\n",
+    "    except:\n",
+    "        print(f'{str(f)} already exists')\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slope_list = list(src_slope.glob('*.tif'))\n",
+    "for f in tqdm.tqdm_notebook(slope_list[:]):\n",
+    "    try:\n",
+    "        shutil.move(str(f), tgt_slope)\n",
+    "    except:\n",
+    "        print(f'{str(f)} already exists')\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -233,5 +358,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
