--- a/PL_03_download_data.ipynb
+++ b/PL_03_download_data.ipynb
@@ -12,7 +12,12 @@
    "metadata": {},
    "source": [
     "Documentation:\n",
-    "https://github.com/samapriya/porder"
+    "https://github.com/samapriya/porder\n",
+    "\n",
+    "https://github.com/tyson-swetnam/porder#order\n",
+    "\n",
+    "Anaconda environment: aicore_data\n",
+    "* change user with ´planet init´"
    ]
   },
   {
@@ -31,7 +36,7 @@
     "import modules.order_utils as util\n",
     "from pathlib import Path\n",
     "import zipfile\n",
-    "import tqdm\n",
+    "from tqdm.notebook import tqdm\n",
     "import numpy as np"
    ]
   },
@@ -50,7 +55,19 @@
    "source": [
     "# Set number of days to look into the past for the orders list\n",
     "DATE_RANGE = 30\n",
-    "download_dir = 'R:\\p_aicore\\AICORE\\planet_data_inference_grid\\downloads'"
+    "#download_dir = 'R:\\p_aicore\\AICORE\\planet_data_inference_grid\\downloads'\n",
+    "download_dir = Path(r'Q:\\p_aicore_pf\\initze\\data\\planet\\planet_data_inference_grid\\downloads')\n",
+    "\n",
+    "# Intermediate location where to copy downloaded files (faster unzip)\n",
+    "#unzip_dir = Path(r'K:\\test\\zips')\n",
+    "unzip_dir = Path(r'K:\\test\\zips')\n",
+    "\n",
+    "# Intermediate location where to store the unzipped files\n",
+    "#target_dir = Path(r'K:\\test\\target')\n",
+    "target_dir = Path(r'K:\\test\\target')\n",
+    "\n",
+    "# Location of final Planet data sorage with RE/PL tiles\n",
+    "tiles_dir = Path(r'Q:\\p_aicore_pf\\initze\\data\\planet\\planet_data_inference_grid\\tiles')"
    ]
   },
   {
@@ -102,7 +119,7 @@
    "source": [
     "success = !porder ostate --state success --start \"{start}\" --end \"{today}\"\n",
     "df = util.show_orders(success)\n",
-    "df"
+    "df.head(40)"
    ]
   },
   {
@@ -125,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ORDERS = np.arange(10)#[0,1,2,3,4]\n",
+    "ORDERS = [0,1,2,3,4] # add order ids here - np.arange(17) for many orders\n",
     "\n",
     "for order_id in ORDERS:\n",
     "    util.download_planet_order(df, order_id, download_dir)"
@@ -135,16 +152,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Desprecated\n",
-    "got to *PL_05_reorder_explorer_downloads*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Restructure downloaded files\n",
-    "* create subdirs for each scene"
+    "## Unzip and reorder files\n",
+    "* add sorting by dl date"
    ]
   },
   {
@@ -153,14 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "util.restructure_downloaded_files(download_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### WOrkaround for Planet Explorer direct download "
+    "zipfiles = list(Path(download_dir).glob('*/*.zip'))"
    ]
   },
   {
@@ -169,71 +171,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!porder quota"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Unzip files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dir = Path(r'R:\\p_aicore\\AICORE\\planet_data_inference_grid\\downloads')\n",
-    "target_dir = Path(r'R:\\p_aicore\\AICORE\\planet_data_inference_grid\\tiles')\n",
-    "dl_name = ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DIR = download_dir# / dl_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zipfiles = list(DIR.glob('*/*.zip'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zipfiles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for zfile in tqdm.tqdm_notebook(zipfiles[:2]):\n",
+    "COPY = 1\n",
+    "for z in tqdm(zipfiles):\n",
     "    try:\n",
-    "        util.unzip_PSOrthoTileOrder(zfile, target_dir=target_dir)\n",
+    "        if not util.check_zipcontent_exists(z, tiles_dir):\n",
+    "            #print(util.check_zipcontent_exists(z, tiles_dir), z.stem, )\n",
+    "            if COPY:\n",
+    "                print('Copying', z)\n",
+    "                shutil.copy(z, unzip_dir)\n",
+    "    except:\n",
+    "        print(f'Error on {z}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unzipfiles = list(unzip_dir.glob('*/*.zip'))\n",
+    "unzipfiles = list(unzip_dir.glob('*.zip'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for zfile in tqdm(unzipfiles[:]):\n",
+    "    try:\n",
+    "        %time util.unzip_PSOrthoTileOrder(zfile, target_dir=target_dir, cleanup_intermediate=False) #needs update for actual processing\n",
     "    except:\n",
     "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dirlist = list(target_dir.glob('*'))\n",
+    "\n",
+    "dirlist = [d for d in dirlist if d.is_dir()]\n",
+    "dirlist = [d for d in dirlist if len(d.stem.split('_'))==4]\n",
+    "\n",
+    "len(dirlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d in tqdm(dirlist[:]):\n",
+    "    path_id, tile_id, date, scene_id = d.stem.split('_')\n",
+    "    tile_target = tiles_dir / tile_id / d.stem\n",
+    "    os.makedirs(tiles_dir / tile_id, exist_ok=True)\n",
+    "    if not tile_target.exists():\n",
+    "        shutil.move(str(d), str(tile_target))\n",
+    "    else:\n",
+    "        print(f'{str(tiles_dir / tile_id)} exists')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Cleanup Zip Files and extracted data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for root, dirs, files in os.walk(unzip_dir):\n",
+    "    for f in files:\n",
+    "        os.unlink(os.path.join(root, f))\n",
+    "    for d in dirs:\n",
+    "        shutil.rmtree(os.path.join(root, d))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -247,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
